--- a/app/views/wiki_pages/search.html.erb
+++ b/app/views/wiki_pages/search.html.erb
@@ -1,34 +1,41 @@
 <%= render :partial => "/wikis/top_links" %>
 
-<p><em>search results for: <%= @name_part %></em></p>
+<h1><%= link_to @wiki.name, wiki_path(@wiki) %></h1>
 
-<table>
-  <tr>
-    <td valign="top" class="small_text">
-    <% unless @wiki_pages.empty? %>
-      matching pages:
-      <div style="margin: 5px; border: 1px #999 solid; background: #FFF; padding:4px 12px;">
-        <% for wiki_page in @wiki_pages %>
-          <p>
-            <%= link_to highlight(wiki_page.title, @name_part), wiki_pages_show_by_title_path(@wiki, wiki_page.url_title) %>
-            <span style="color: #555;">&nbsp; &nbsp; <%= highlight(excerpt(strip_tags(wiki_page.body), @name_part), @name_part) %></span>
-          </p>
-        <% end %>
-      </div>
-    <% end -%>
-    </td>
-    <td valign="top" class="small_text" style="white-space:nowrap">
-    <% unless @wiki_tags.empty? %>
-      matching tags:
-        <div style="margin: 5px; border: 1px #999 solid; background: #FFF;  padding:4px 12px;">
-          <% for wiki_tag in @wiki_tags -%>
-          <p>
-            <%= link_to wiki_tag.name, wiki_tag_path(@wiki, wiki_tag.name) %>
-            (<%= pluralize wiki_tag.wiki_pages_count, "page" %>)
-          </p>
+<% if @wiki_pages.empty? and @wiki_tags.empty? %>
+  <p>No pages or tags matched the search query: <em><%= @name_part %></em></p>
+<% else %>
+
+  <p><em>search results for: <%= @name_part %></em></p>
+
+  <table class="search_results_table">
+    <tr>
+      <td valign="top" class="small_text">
+      <% unless @wiki_pages.empty? %>
+        matching pages:
+        <div style="margin: 5px; border: 1px #999 solid; background: #FFF; padding:4px 12px;">
+          <% for wiki_page in @wiki_pages %>
+            <p>
+              <%= link_to highlight(wiki_page.title, @name_part), wiki_pages_show_by_title_path(@wiki, wiki_page.url_title) %>
+              <span style="color: #555;">&nbsp; &nbsp; <%= highlight(excerpt(strip_tags(wiki_page.body), @name_part), @name_part) %></span>
+            </p>
           <% end %>
-      </div>
-    <% end -%>
-    </td>
-  </tr>
-</table>
+        </div>
+      <% end -%>
+      </td>
+      <td valign="top" class="small_text" style="white-space:nowrap">
+      <% unless @wiki_tags.empty? %>
+        matching tags:
+          <div style="margin: 5px; border: 1px #999 solid; background: #FFF;  padding:4px 12px;">
+            <% for wiki_tag in @wiki_tags -%>
+            <p>
+              <%= link_to wiki_tag.name, wiki_tag_path(@wiki, wiki_tag.name) %>
+              (<%= pluralize wiki_tag.wiki_pages_count, "page" %>)
+            </p>
+            <% end %>
+        </div>
+      <% end -%>
+      </td>
+    </tr>
+  </table>
+<% end %>
