more wiki comment atom fixes

--- a/app/views/wiki_comments/index.html.erb
+++ b/app/views/wiki_comments/index.html.erb
@@ -4,18 +4,6 @@
 
 <% for comment in @comments %>
   <div class="wiki_chatter">
-    <p>
-      <% if comment.wiki_page %>
-        <span class="darkgray">
-          On <%= link_to comment.wiki_page.title,
-            wiki_pages_show_by_title_path(@wiki, :title => comment.wiki_page.url_title) %>,
-          <strong><%= comment.user.name %></strong> said <%= post_time comment.created_at %>: &nbsp;</span>
-      <% else %>
-        <span class="darkgray">
-          <%= post_time comment.created_at %> <strong><%= comment.user.name %></strong> 
-        </span>
-      <% end %>
-      <%= textilize_without_paragraph comment.body %>
-    </p>
+    <%= comment.to_html %>
   </div><br/>
 <% end %>
