added a password reset to the login page

--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -4,8 +4,8 @@ Fill out the form below and instructions to reset your password will be emailed 
 <br />
 
 <% form_tag password_resets_path do %>
-  <label>Email:</label><br />
-  <%= text_field_tag "email" %><br />
+  <label>Username or Email address:</label><br />
+  <%= text_field_tag "login_or_email" %><br />
   <br />
   <%= submit_tag "Reset my password" %>
 <% end %>
