--- a/app/views/wiki_pages/history.html.erb
+++ b/app/views/wiki_pages/history.html.erb
@@ -1,5 +1,6 @@
 <div style="float:right">
-  [<%= link_to 'back to current version', wiki_pages_show_by_title_path(@wiki, @wiki_page.url_title) %>]
+  [<%= link_to 'back to current version',
+        wiki_pages_show_by_title_path(:wiki_id => @wiki, :title => @wiki_page.url_title) %>]
 </div>
 
 <h1><%= link_to @wiki.name, wiki_path(@wiki) %>: <%= @wiki_page.title %></h1>
