--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,13 @@
       <%= javascript_include_tag 'jquery-1.3.2.min' %>
     <% end %>
     <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
-    <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery.string.1.0-min', 'lowpro.jquery' %>
+    <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery.string.1.0-min', 'lowpro.jquery', 'behaviors' %>
     <script type="text/javascript" src="/javascripts/jquery-ui-1.7.2.custom.min.js"></script>
-
+    <script type="text/javascript">
+      jQuery(function($) {
+        $('a.show_hide_link').attach(ShowHideLink);
+      });
+    </script>
     <%= yield :javascript %>
   </head>
   <body>
