--- a/app/views/user_groups/index.html.erb
+++ b/app/views/user_groups/index.html.erb
@@ -18,7 +18,12 @@
         <% @user_groups.each do |user_group| %>
           <tr>
             <td><%= user_group.name %></td>
-            <td><%= user_group.access_string %></td>
+            <td>
+              [<%= link_to 'show/hide access', { :toggle => "group_access_#{user_group.id}" }, :class => 'show_hide_link' %>]
+              <div class="group_access_<%= user_group.id %>" style="display:none">
+                <%= user_group.access_as_html %>
+              </div>
+            </td>
             <td style="text-align:right">
               <%= link_to 'list members', user_group %> &nbsp;
               <%= link_to 'edit name/access', edit_user_group_path(user_group) %> &nbsp;
