--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -22,7 +22,7 @@
         :name => 'override', :format => 'css') %>?<%= @css_override_timestamp %>" type="text/css" media="screen"/>
     <% end %>
 
-    <% if RAILS_ENV == "production" %>
+    <% if Rails.env == "production" %>
       <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
     <% else %>
       <%= javascript_include_tag 'jquery-1.3.2.min' %>
