--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <div style="float:right">
-  <% form_tag(search_forum_path(@forum),  :method => :get  ) do %>
+  <%= form_tag(search_forum_path(@forum),  :method => :get  ) do %>
     <%= text_field_tag :q, "quick search", :onfocus => "$('q').value='';" %>
     <%= submit_tag "Go" %>
   <% end %>
