--- a/app/views/users/reg_pass_required.html.erb
+++ b/app/views/users/reg_pass_required.html.erb
@@ -1,4 +1,4 @@
-<% form_tag register_path, :method => :get do %>
+<%= form_tag register_path, :method => :get do %>
   Registration Passcode:
   <%= password_field_tag :p %>
   <%= submit_tag 'go' %>
