--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -20,7 +20,7 @@
 
 <h2>Create a new Category</h2>
 
-<% form_for(@category) do |f| %>
+<%= form_for(@category) do |f| %>
   <%= f.error_messages %>
   <p>
     <%= f.text_field :name %>
