--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -3,7 +3,7 @@
 Fill out the form below and instructions to reset your password will be emailed to you:<br />
 <br />
 
-<% form_tag password_resets_path do %>
+<%= form_tag password_resets_path do %>
   <label>Username or Email address:</label><br />
   <%= text_field_tag "login_or_email" %><br />
   <br />
