--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="edit_content_box">
 
-  <% form_tag( { :action => :update_theme_settings } ) do  %>
+  <%= form_tag( { :action => :update_theme_settings } ) do  %>
     <p>
       <strong>Layout:</strong>
       <%= select_tag :theme_layout, options_for_select( theme_layouts_list, @theme_layout ) %>
