--- a/app/views/user_groups/add_members.html.erb
+++ b/app/views/user_groups/add_members.html.erb
@@ -1,6 +1,6 @@
 <h1>Addding Users to Group: <%= @user_group.name %></h1>
 
-<% form_tag add_users_user_group_path(@user_group) do %>
+<%= form_tag add_users_user_group_path(@user_group) do %>
   <table class="nice_table">
     <tr>
       <th>Login (Full Name)</th>
