--- a/app/views/user_groups/new.html.erb
+++ b/app/views/user_groups/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New user group</h1>
 
-<% form_for(@user_group) do |f| %>
+<%= form_for(@user_group) do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
   <%= f.submit 'Create' %>
