--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit <%= @user == @current_user ? 'Your' : 'User' %> Account Details</h1>
 
-<% form_for @user, :url => @user == @current_user ? account_path : user_path(@user) do |f| %>
+<%= form_for @user, :url => @user == @current_user ? account_path : user_path(@user) do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
   <%= f.submit "Update" %>
