--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>RailsCMSWikiForum</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <%= csrf_meta_tag %>
+    <link rel="icon" type="image/png" href="/images/favorite.png"/>
+    <title><%= [site_title, page_title].reject(&:blank?).join(' - ') %></title>
+    <link rel="stylesheet" href="/stylesheets/blueprint/screen.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="/stylesheets/blueprint/print.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="/stylesheets/blueprint/plugins/fancy-type/screen.css" type="text/css" />
+    <link rel="stylesheet" href="/stylesheets/blueprint/plugins/silksprite/sprite.css" type="text/css" />
+    <!--[if lt IE 8]>
+      <link rel="stylesheet" href="/stylesheets/blueprint/ie.css" type="text/css" media="screen, projection">
+    <![endif]-->
+    <%= stylesheet_link_tag 'error_messages' %>
+    <%= stylesheet_link_tag 'text_and_colors' %>
+    <%= stylesheet_link_tag 'application' %>
+    <link rel="stylesheet" href="/tablesorter/blue/style.css" type="text/css" media="screen"/>
+    <link type="text/css" href="/stylesheets/smoothness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+		<link rel="stylesheet" href="<%= url_for(:controller => '/themes', :action => :colors,
+      :name => @theme_colors, :format => 'css') %>?<%= @custom_colors_timestamp %>" type="text/css" media="screen"/>
+    <% if @css_override %>
+      <link rel="stylesheet" href="<%= url_for(:controller => '/themes', :action => :css,
+        :name => 'override', :format => 'css') %>?<%= @css_override_timestamp %>" type="text/css" media="screen"/>
+    <% end %>
+      
+    <% if RAILS_ENV == "production" %>
+      <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
+    <% else %>
+      <%= javascript_include_tag 'jquery-1.3.2.min' %>
+    <% end %>
+    <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
+    <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery.string.1.0-min', 'lowpro.jquery', 'behaviors' %>
+    <script type="text/javascript" src="/javascripts/jquery-ui-1.7.2.custom.min.js"></script>
+    <script type="text/javascript">
+      jQuery(function($) {
+        $('a.show_hide_link').attach(ShowHideLink);
+      });
+    </script>
+    <%= yield :javascript %>
+  </head>
+  <body>
+    <%= Template.new(@layout_file).render_template(self) %>
+  </body>
 </html>
+
+
