--- a/app/views/wiki_pages/search.html.erb
+++ b/app/views/wiki_pages/search.html.erb
@@ -15,10 +15,12 @@
         matching pages:
         <div style="margin: 5px; border: 1px #999 solid; background: #FFF; padding:4px 12px;">
           <% for wiki_page in @wiki_pages %>
-            <p>
-              <%= link_to highlight(wiki_page.title, @name_part), wiki_pages_show_by_title_path(@wiki, wiki_page.url_title) %>
-              <span style="color: #555;">&nbsp; &nbsp; <%= highlight(excerpt(strip_tags(wiki_page.body), @name_part), @name_part) %></span>
-            </p>
+            <% @name_part.split(/\s/).each do |part| %>
+              <p>
+                <%= link_to highlight(wiki_page.title, part), wiki_pages_show_by_title_path(@wiki, wiki_page.url_title) %>
+                <span style="color: #555;">&nbsp; &nbsp; <%= highlight(excerpt(strip_tags(wiki_page.body), part), part) %></span>
+              </p>
+            <% end %>
           <% end %>
         </div>
       <% end -%>
