--- a/app/views/content_pages/index.html.erb
+++ b/app/views/content_pages/index.html.erb
@@ -33,12 +33,12 @@
         <td><%= @search_phrase ? highlight(excerpt(strip_tags(content_page.body), @search_phrase, :radius => 75), @search_phrase) :
                     truncate(strip_tags(content_page.body), :length => 150) %></td>
         <td><%= content_page.publish_on ? content_page.publish_on.strftime('%m/%d/%Y') : '' %></td>
-        <td><%= content_page.categories.map { |cat| link_to cat.name, cat }.join(', ') %></td>
+        <td><%=raw content_page.categories.map { |cat| link_to cat.name, cat }.join(', ') %></td>
         <% if is_admin? %>
           <td>
-            <%= link_to '<span class="ui-icon ui-icon-document"/>', edit_content_page_path(content_page),
+            <%= link_to '<span class="ui-icon ui-icon-document"/>'.html_safe, edit_content_page_path(content_page),
                     :title => "click to edit" %>
-            <%= link_to '<span class="ui-icon ui-icon-closethick"/>', content_page,
+            <%= link_to '<span class="ui-icon ui-icon-closethick"/>'.html_safe, content_page,
                     :confirm => "Are you sure you want to permanently delete this page (#{content_page.name})?",
                     :method => :delete, :title => "click to delete" %>
           </td>
