--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,11 @@
     <% end %>
       
     <% if RAILS_ENV == "production" %>
-      <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
+      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
     <% else %>
-      <%= javascript_include_tag 'jquery-1.3.2.min' %>
+      <%= javascript_include_tag 'jquery' %>
     <% end %>
+    <%= javascript_include_tag 'rails', 'application' %>
     <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
     <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery.string.1.0-min', 'lowpro.jquery', 'behaviors' %>
     <script type="text/javascript" src="/javascripts/jquery-ui-1.7.2.custom.min.js"></script>
