--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -23,9 +23,9 @@
     <% end %>
 
     <% if Rails.env == "production" %>
-      <script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.min.js"></script>
+      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <% else %>
-      <%= javascript_include_tag 'jquery-1.3.2.min' %>
+      <%= javascript_include_tag 'jquery' %>
     <% end %>
     <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
     <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery.string.1.0-min', 'lowpro.jquery' %>
