--- a/app/views/user_groups/show.html.erb
+++ b/app/views/user_groups/show.html.erb
@@ -22,7 +22,7 @@
       <tr>
         <td><%= link_to user.login, edit_user_path(user) %> (<%= user.fullname %>)</td>
         <td><%= user.email %></td>
-        <td><%= link_to "drop from group", drop_user_user_group_path(@user_group, :user_id => 1), :method => :post %></td>
+        <td><%= link_to "drop from group", drop_user_user_group_path(@user_group, :user_id => user.id), :method => :post %></td>
         <td><%= check_box_tag "user_ids[]", user.id %></td>
       </tr>
     <% end %>
