define Wiki(Page) abilities & auth/z link wrappers for Wikis

--- a/app/views/message_posts/_message_in_forum.html.erb
+++ b/app/views/message_posts/_message_in_forum.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td class="leftside">
     <div style="float:left; padding: 2px 4px;">
-      <%= gravatar_for message.user, :size => 50 %>
+      <%=raw gravatar_for message.user, :size => 50 %>
     </div>
     posted <%= post_time message.created_at  %> by
     <strong><%#= link_to message.user.name, '#TODO_link_to_users_profile'  %><%= message.user.full_name %></strong>
